# libeasykey

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  travis-push.sh
examples/: example.ini  example.kf
examples/1/: Makefile  main.c
examples/2/: main.c
examples/findKey/: Makefile  example  example.kf  main.c
examples/readKey/: main.c
examples/writeKey/: Makefile  main.c
include/: easykey.h  easykey.h.in
include/easykey/: extras.h  types.h
source/: extras.c  findKey.c  flush.c  free.c  fsize.c  get.c  isKey.c  key.c  lineHasKey.c  load.c  readKey.c  readLine.c  section.c  set.c  writeKey.c
